White space bug fixed

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -5,6 +5,7 @@
 body, html {
   font-size: 14.2px;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 .icon-light {
